--- a/assets/index.html
+++ b/assets/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 
-        <!-- build:css /css/css.min.css -->
+        <!-- build:css ../public/css/css.min.css -->
         
         <!-- main module -->
         <link rel="stylesheet" href="css/main.css">
@@ -52,7 +52,7 @@
         <div class="container" ng-view></div>
 
         
-        <!-- build:js /js/js.min.js -->
+        <!-- build:js ../public/js/js.min.js -->
         <script src="lib/jquery/jquery-2.1.1.js" type="text/javascript"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="lib/datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
