--- a/assets/index.html
+++ b/assets/index.html
@@ -56,6 +56,7 @@
         <script src="lib/jquery/jquery-2.1.1.js" type="text/javascript"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="lib/datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
+        <script src="lib/tinymce/tinymce.min.js" type="text/javascript"></script>
 
         <script src="lib/angular/angular-file-upload-shim.js"></script>
         <script src="lib/angular/angular.js"></script>
@@ -138,7 +139,6 @@
         <!-- jquery scripts -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
-        <script src="//tinymce.cachefly.net/4.1/tinymce.min.js"></script>
 
         <!-- build:delete -->
         <script src="http://localhost:35729/livereload.js?snipver=1"></script>
