--- a/assets/index.html
+++ b/assets/index.html
@@ -129,6 +129,7 @@
         <script src="modules/notification/controllers/list.js"></script>
         <script src="modules/notification/controllers/form.js"></script>
         <script src="modules/notification/services/notificationService.js"></script>
+        <script src="modules/notification/directives/ngFile.js"></script>
 
 
         <script src="modules/statistic/module.js"></script>
