--- a/assets/index.html
+++ b/assets/index.html
@@ -51,7 +51,8 @@
 
         <div class="container" ng-view></div>
 
-        
+          <script src="lib/angular/angular-tinymce.js"></script>
+          <script src="lib/tinymce/tinymce.min.js" type="text/javascript"></script>
         <!-- build:js ../public/js/js.min.js -->
         <script src="lib/jquery/jquery-2.1.1.js" type="text/javascript"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
@@ -60,7 +61,6 @@
 
         <script src="lib/angular/angular-file-upload-shim.js"></script>
         <script src="lib/angular/angular.js"></script>
-        <script src="lib/angular/angular-tinymce.js"></script>
         <script src="lib/angular/angular-route.js"></script>
         <script src="lib/angular/angular-animate.js"></script>
         <script src="lib/angular/angular-resource.js"></script>
