--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 
-        <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/asociados-client/public/css/css.min.css">
+        <link rel="stylesheet" href="../public/css/css.min.css">
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
     
@@ -29,8 +29,9 @@
 
         <div class="container" ng-view></div>
 
-          <script src="lib/angular/angular-tinymce.js"></script>
-        <script src="https://s3-us-west-2.amazonaws.com/asociados-client/public/js/js.min.js"></script>
+        <script src="//tinymce.cachefly.net/4.1/tinymce.min.js"></script>
+
+        <script src="../public/js/js.min.js"></script>
 
         <!-- jquery scripts -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
