--- a/assets/index.html
+++ b/assets/index.html
@@ -51,13 +51,13 @@
 
         <div class="container" ng-view></div>
 
-        
+        <script src="//tinymce.cachefly.net/4.1/tinymce.min.js"></script>
+
         <!-- build:js ../public/js/js.min.js -->
         <script src="lib/jquery/jquery-2.1.1.js" type="text/javascript"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="lib/datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
-        <script src="lib/tinymce/tinymce.min.js" type="text/javascript"></script>
-
+        
         <script src="lib/angular/angular-file-upload-shim.js"></script>
         <script src="lib/angular/angular.js"></script>
         <script src="lib/angular/angular-tinymce.js"></script>
