--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,7 @@
         <title>Panel Asociados</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
 
         <!-- build:css ../public/css/css.min.css -->
         <!-- main module -->
@@ -37,6 +37,8 @@
         <div nav-bar></div>    
 
         <div class="container" ng-view></div>
+        
+        <script>var ENV = 'dev';</script>
 
         <script src="//tinymce.cachefly.net/4.1/tinymce.min.js"></script>
 
