--- a/assets/index.html
+++ b/assets/index.html
@@ -38,7 +38,7 @@
 
         <div class="container" ng-view></div>
         
-        <script>var ENV = 'dev';</script>
+        <script>var ENV = 'Dev';</script>
 
         <script src="//tinymce.cachefly.net/4.1/tinymce.min.js"></script>
 
