--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
         <title>Panel Asociados</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/asociados-client/stage/img/favicon.ico" type="image/x-icon">
 
-        <link rel="stylesheet" href="../public/css/css.min.css">
+        <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/asociados-client/stage/css/please-wait/please-wait.min.css">
+
+        <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/asociados-client/stage/css/css.min.css">
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 
@@ -29,11 +31,24 @@
 
         <div class="container" ng-view></div>
 
-        <script>var ENV = 'Dev';</script>
+        <!-- Add pleasewait lib -->
+        <script src="https://s3-us-west-2.amazonaws.com/asociados-client/stage/js/please-wait/please-wait.min.js"></script>
+
+        <script type="text/javascript">
+            var ENV = 'Stage';
+            var loading_screen = pleaseWait({
+                  backgroundColor: '#22ba64',
+                  loadingHtml: "<p class='loading-message' style='color: white; font-size: 2.5em;'>Bienvenido<br><br> <p style='font-size: 1.5em;color: white;'>...Cargando...</p> </p>",
+                  loaded: true,
+                  finishing: true,
+                  finishing: true
+            });
+        </script>
+
 
         <script src="//tinymce.cachefly.net/4.1/tinymce.min.js"></script>
 
-        <script src="../public/js/js.min.js"></script>
+        <script src="https://s3-us-west-2.amazonaws.com/asociados-client/stage/js/js.min.js"></script>
 
         <!-- jquery scripts -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
