fix colors in tinymce [texmporal]

--- a/assets/index.html
+++ b/assets/index.html
@@ -60,7 +60,7 @@
         </script>
 
 
-        <script src="//tinymce.cachefly.net/4.1/tinymce.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.2.5/tinymce.min.js"></script>
 
         <!-- build:js ../public/js/js.min.js -->
         <script src="lib/jquery/jquery-2.1.1.js" type="text/javascript"></script>
