--- a/assets/index.html
+++ b/assets/index.html
@@ -36,10 +36,16 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <!-- loading directive -->
+        <div loading></div>
+
+        <!-- modal directive -->
         <div modal></div>
 
+        <!-- nav ba directive -->
         <div nav-bar></div>
 
+        <!-- view directive -->
         <div class="container" ng-view></div>
 
         <!-- Add pleasewait lib -->
@@ -83,6 +89,7 @@
 
         <script src="modules/common/module.js"></script>
         <script src="modules/common/services/config.js"></script>
+        <script src="modules/common/directives/loading.js"></script>
 
         <script src="modules/home/module.js"></script>
         <script src="modules/home/controllers/home.js"></script>
