Changes in cliente for Social network

--- a/assets/index.html
+++ b/assets/index.html
@@ -123,6 +123,7 @@
         <script src="modules/cooperative/controllers/email.js"></script>
         <script src="modules/cooperative/controllers/emailForm.js"></script>
         <script src="modules/cooperative/controllers/socialForm.js"></script>
+        <script src="modules/cooperative/controllers/socialList.js"></script>
         <script src="modules/cooperative/services/emailService.js"></script>
         <script src="modules/cooperative/services/socialService.js"></script>
 
