--- a/assets/index.html
+++ b/assets/index.html
@@ -6,10 +6,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Panel Asociados</title>
+        <title>Clientes - Asociados</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
         <!-- build:css ../public/css/please-wait/please-wait.min.css -->
             <link rel="stylesheet" href="lib/please-wait/please-wait.css" />
