--- a/assets/index.html
+++ b/assets/index.html
@@ -69,6 +69,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.2.5/tinymce.min.js"></script>
 
         <!-- build:js ../public/js/js.min.js -->
+        <script src="lib/moment/moment.min.js"></script>
         <script src="lib/jquery/jquery-2.1.1.js" type="text/javascript"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="lib/datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
@@ -88,7 +89,11 @@
         <script src="js/app.js"></script>
 
         <script src="modules/common/module.js"></script>
+        <script src="modules/common/filters.js"></script>
         <script src="modules/common/services/config.js"></script>
+        <script src="modules/common/services/crud.js"></script>
+        <script src="modules/common/controllers/list.js"></script>
+        <script src="modules/common/directives/list-view.js"></script>
         <script src="modules/common/directives/loading.js"></script>
 
         <script src="modules/home/module.js"></script>
