--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-        <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/asociados-clientundefinedcss/please-wait/please-wait.min.css">
+        <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/asociados-client/stage/css/please-wait/please-wait.min.css">
 
-        <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/asociados-clientundefinedcss/css.min.css">
+        <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/asociados-client/stage/css/css.min.css">
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 
@@ -38,10 +38,10 @@
         <div class="container" ng-view></div>
 
         <!-- Add pleasewait lib -->
-        <script src="https://s3-us-west-2.amazonaws.com/asociados-clientundefinedjs/please-wait/please-wait.min.js"></script>
+        <script src="https://s3-us-west-2.amazonaws.com/asociados-client/stage/js/please-wait/please-wait.min.js"></script>
 
         <script type="text/javascript">
-            var ENV = 'Dev';
+            var ENV = 'Stage';
             var loading_screen = pleaseWait({
                   logo:  "http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
@@ -55,7 +55,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.2.5/tinymce.min.js"></script>
 
-        <script src="https://s3-us-west-2.amazonaws.com/asociados-clientundefinedjs/js.min.js"></script>
+        <script src="https://s3-us-west-2.amazonaws.com/asociados-client/stage/js/js.min.js"></script>
 
         <!-- jquery scripts -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
