Add button for send xlsx

--- a/assets/index.html
+++ b/assets/index.html
@@ -150,6 +150,7 @@
         <script src="modules/user/module.js"></script>
         <script src="modules/user/services/userService.js"></script>
         <script src="modules/user/controllers/form.js"></script>
+        <script src="modules/user/controllers/list.js"></script>
 
         <script src="modules/notification/module.js"></script>
         <script src="modules/notification/controllers/list.js"></script>
