Update task view

--- a/assets/index.html
+++ b/assets/index.html
@@ -167,6 +167,10 @@
         <script src="modules/groups/controllers/form.js"></script>
         <script src="modules/groups/controllers/fill.js"></script>
         <script src="modules/groups/services/groupsService.js"></script>
+
+        <script src="modules/tasks/module.js"></script>
+        <script src="modules/tasks/controllers/list.js"></script>
+        <script src="modules/tasks/services/taskService.js"></script>
         <!-- endbuild -->
 
         <!-- jquery scripts -->
