Add module terms and conditions

--- a/assets/index.html
+++ b/assets/index.html
@@ -193,6 +193,9 @@
         <script src="modules/tasks/module.js"></script>
         <script src="modules/tasks/controllers/list.js"></script>
         <script src="modules/tasks/services/taskService.js"></script>
+
+        <script src="modules/terms&conditions/module.js"></script>
+        <script src="modules/terms&conditions/controllers/fill.js"></script>
         <!-- endbuild -->
 
         <!-- jquery scripts -->
