visual changes login

--- a/assets/index.html
+++ b/assets/index.html
@@ -105,6 +105,8 @@
         <script src="lib/angular/angular-sanitize.js"></script>
         <script src="lib/angular/angular-uibootstrap.js"></script>
         <script src="lib/angular/angular-file-model.js"></script>
+        <script src="lib/trianglify/dist/trianglify.min.js"></script>
+        
         <!--<script src="lib/angular/angular-file-upload.js"></script>-->
 
         <script src="js/util.js"></script>
