--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,28 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--
+                There is not a BUG
+
+              ,,                ,,
+            (((((              )))))
+           ((((((              ))))))
+           ((((((              ))))))
+            (((((,r@@@@@@@@@@e,)))))
+             (((@@@@@@@@@@@@@@@@)))
+              \@@/,:::,\/,:::,\@@
+             /@@@|:::::||:::::|@@@\
+            / @@@\':::'/\':::'/@@@ \
+           /  /@@@@@@@//\\@@@@@@@\  \
+          (  /  '@@@@@====@@@@@'  \  )
+           \(     /          \     )/
+             \   (            )   /
+                  \          /
+                  @camilortte
+-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" ng-app="app"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
@@ -16,6 +38,7 @@
         <link rel="stylesheet" href="../public/css/css.min.css">
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+        <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css">
 
     </head>
 
