Visual changes only

--- a/assets/index.html
+++ b/assets/index.html
@@ -78,7 +78,7 @@
         <!-- endbuild -->
 
         <script type="text/javascript">
-            var ENV = 'Stage';
+            var ENV = 'Dev';
             var loading_screen = pleaseWait({
                   logo:  "http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
@@ -107,11 +107,9 @@
         <script src="lib/angular/angular-sanitize.js"></script>
         <script src="lib/angular/angular-uibootstrap.js"></script>
         <script src="lib/angular/angular-file-model.js"></script>
-        <script src="lib/angular-sweetalert/SweetAlert.min.js"></script>
         <script src="lib/sweetalert/dist/sweetalert.min.js"></script>
         <script src="lib/sweetalert/dist/sweetalert.min.js"></script>
         <script src="lib/ngSweetAlert/SweetAlert.min.js"></script>
-
         
         <!--<script src="lib/angular/angular-file-upload.js"></script>-->
 
