--- a/assets/index.html
+++ b/assets/index.html
@@ -41,6 +41,7 @@
         <!-- main module -->
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css">
+        <link rel="stylesheet" href="lib/angular-ui-tree/angular-ui-tree.min.css">
 
         <!-- bootstrap module -->
         <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
@@ -110,6 +111,7 @@
         <script src="lib/sweetalert/dist/sweetalert.min.js"></script>
         <script src="lib/sweetalert/dist/sweetalert.min.js"></script>
         <script src="lib/ngSweetAlert/SweetAlert.min.js"></script>
+        <script src="lib/angular-ui-tree/angular-ui-tree.min.js"></script>
         
         <!--<script src="lib/angular/angular-file-upload.js"></script>-->
 
