updte changes tinimyci

--- a/assets/index.html
+++ b/assets/index.html
@@ -91,7 +91,7 @@
         </script>
 
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.2.5/tinymce.min.js"></script>
+        <script src="https://cdn.tinymce.com/4/tinymce.min.js"></script>
 
         <!-- build:js ../public/js/js.min.js -->
         <script src="lib/moment/moment.min.js"></script>
