Added polls to create and edit

--- a/assets/index.html
+++ b/assets/index.html
@@ -204,6 +204,11 @@
 
         <script src="modules/terms&conditions/module.js"></script>
         <script src="modules/terms&conditions/controllers/fill.js"></script>
+        
+        <script src="modules/poll/module.js"></script>
+        <script src="modules/poll/controllers/list.js"></script>
+        <script src="modules/poll/controllers/form.js"></script>
+        <script src="modules/poll/services/poll.js"></script>
         <!-- endbuild -->
 
         <!-- jquery scripts -->
