--- a/assets/index.html
+++ b/assets/index.html
@@ -208,6 +208,8 @@
         <script src="modules/poll/module.js"></script>
         <script src="modules/poll/controllers/list.js"></script>
         <script src="modules/poll/controllers/form.js"></script>
+        <script src="modules/poll/controllers/view.js"></script>
+        <script src="modules/poll/controllers/answer.js"></script>
         <script src="modules/poll/services/poll.js"></script>
         <!-- endbuild -->
 
