--- a/assets/index.html
+++ b/assets/index.html
@@ -112,8 +112,7 @@
         <script src="lib/sweetalert/dist/sweetalert.min.js"></script>
         <script src="lib/ngSweetAlert/SweetAlert.min.js"></script>
         <script src="lib/angular-ui-tree/angular-ui-tree.min.js"></script>
-        
-        <!--<script src="lib/angular/angular-file-upload.js"></script>-->
+        <script src="lib/ngImgCrop-master/source/js/ng-img-crop.js"></script>
 
         <script src="js/util.js"></script>
         <script src="js/app.js"></script>
