--- a/assets/index.html
+++ b/assets/index.html
@@ -79,7 +79,7 @@
         <!-- endbuild -->
 
         <script type="text/javascript">
-            var ENV = 'Prod';
+            var ENV = 'Dev';
             var loading_screen = pleaseWait({
                   logo:  "http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
