show statistics to polls

--- a/assets/index.html
+++ b/assets/index.html
@@ -113,6 +113,9 @@
         <script src="lib/ngSweetAlert/SweetAlert.min.js"></script>
         <script src="lib/angular-ui-tree/angular-ui-tree.min.js"></script>
         <script src="lib/ngImgCrop-master/source/js/ng-img-crop.js"></script>
+        <!--Chart-->
+        <script src="lib/Chart.js/dist/Chart.min.js"></script>
+        <script src="lib/angular-chart.js/dist/angular-chart.min.js"></script>
 
         <script src="js/util.js"></script>
         <script src="js/app.js"></script>
