--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <link rel="stylesheet" href="../public/css/css.min.css">
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
-        <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css">
+        
 
     </head>
 
@@ -64,7 +64,7 @@
         <script src="../public/js/please-wait/please-wait.min.js"></script>
 
         <script type="text/javascript">
-            var ENV = 'Local';
+            var ENV = 'Stage';
             var loading_screen = pleaseWait({
                   logo:  "http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
@@ -76,7 +76,7 @@
         </script>
 
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.2.5/tinymce.min.js"></script>
+        <script src="https://cdn.tinymce.com/4/tinymce.min.js"></script>
 
         <script src="../public/js/js.min.js"></script>
 
