download excel from polls

--- a/assets/index.html
+++ b/assets/index.html
@@ -215,6 +215,8 @@
         <script src="modules/poll/controllers/answer.js"></script>
         <script src="modules/poll/services/poll.js"></script>
         <!-- endbuild -->
+        
+        <script src="lib/file-saver/FileSaver.js"></script>
 
         <!-- jquery scripts -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
