endpoints to notifications, users, groups and credits

--- a/assets/index.html
+++ b/assets/index.html
@@ -79,7 +79,7 @@
         <!-- endbuild -->
 
         <script type="text/javascript">
-            var ENV = 'Stage';
+            var ENV = 'Dev';
             var loading_screen = pleaseWait({
                   logo:  "http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
@@ -127,6 +127,7 @@
         <script src="modules/common/controllers/list.js"></script>
         <script src="modules/common/directives/list-view.js"></script>
         <script src="modules/common/directives/loading.js"></script>
+        <script src="modules/common/directives/accessLevel.js"></script>
 
         <script src="modules/home/module.js"></script>
         <script src="modules/home/controllers/home.js"></script>
