--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,8 @@
         <script src="https://cdn.tinymce.com/4/tinymce.min.js"></script>
 
         <script src="../public/js/js.min.js"></script>
+        
+        <script src="lib/file-saver/FileSaver.js"></script>
 
         <!-- jquery scripts -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
