--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
         <script src="../public/js/please-wait/please-wait.min.js"></script>
 
         <script type="text/javascript">
-            var ENV = 'Dev';
+            var ENV = 'Stage';
             var loading_screen = pleaseWait({
                   logo:  "http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
