--- a/assets/index.html
+++ b/assets/index.html
@@ -31,6 +31,7 @@
         <title>Clientes - Asociados</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
         <!-- build:css ../public/css/please-wait/please-wait.min.css -->
@@ -51,7 +52,7 @@
         <!-- endbuild -->
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
-        
+
 
     </head>
 
@@ -79,7 +80,7 @@
         <!-- endbuild -->
 
         <script type="text/javascript">
-            var ENV = 'Stage';
+            var ENV = 'Dev';
             var loading_screen = pleaseWait({
                   logo:  "http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
