--- a/assets/index.html
+++ b/assets/index.html
@@ -82,7 +82,7 @@
         <script type="text/javascript">
             var ENV = 'Dev';
             var loading_screen = pleaseWait({
-                  logo:  "http://i.imgur.com/iHf1TWN.png",
+                  logo:  "",//"http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
                   loadingHtml: "<p class='loading-message' style='color: white; font-size: 2.5em;'>Bienvenido<br><br> <p style='font-size: 1.5em;color: white;'>...Cargando...</p> </p>",
                   loaded: true,
@@ -174,6 +174,7 @@
 
         <script src="modules/credit/module.js"></script>
         <script src="modules/credit/controllers/form.js"></script>
+        <script src="modules/credit/controllers/list.js"></script>
         <script src="modules/credit/services/creditService.js"></script>
 
         <script src="modules/creditRequest/module.js"></script>
