--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         <script type="text/javascript">
             var ENV = 'Stage';
             var loading_screen = pleaseWait({
-                  logo:  "http://i.imgur.com/iHf1TWN.png",
+                  logo:  "",//"http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
                   loadingHtml: "<p class='loading-message' style='color: white; font-size: 2.5em;'>Bienvenido<br><br> <p style='font-size: 1.5em;color: white;'>...Cargando...</p> </p>",
                   loaded: true,
