--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
         <script src="../public/js/please-wait/please-wait.min.js"></script>
 
         <script type="text/javascript">
-            var ENV = 'Stage';
+            var ENV = 'Dev';
             var loading_screen = pleaseWait({
                   logo:  "",//"http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
