--- a/assets/index.html
+++ b/assets/index.html
@@ -80,7 +80,7 @@
         <!-- endbuild -->
 
         <script type="text/javascript">
-            var ENV = 'Dev';
+            var ENV = 'Stage';
             var loading_screen = pleaseWait({
                   logo:  "",//"http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
