fix url send creditrequest xls file

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
         <script src="../public/js/please-wait/please-wait.min.js"></script>
 
         <script type="text/javascript">
+            // var ENV = 'Dev';
             var ENV = 'Stage';
             var loading_screen = pleaseWait({
                   logo:  "",//"http://i.imgur.com/iHf1TWN.png",
