--- a/assets/index.html
+++ b/assets/index.html
@@ -81,7 +81,7 @@
 
         <script type="text/javascript">
             // var ENV = 'Dev';
-            var ENV = 'Stage';
+            var ENV = 'Prod';
             var loading_screen = pleaseWait({
                   logo:  "",//"http://i.imgur.com/iHf1TWN.png",
                   backgroundColor: '#22ba64',
