--- a/assets/index.html
+++ b/assets/index.html
@@ -32,6 +32,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+        <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/asociados.stage/favicon.ico" type="image/x-icon">
 
         <!-- build:css ../public/css/please-wait/please-wait.min.css -->
             <link rel="stylesheet" href="lib/please-wait/please-wait.css" />
